Correct z-index

--- a/src/app/sections/blog-item/blog-item.component.sass
+++ b/src/app/sections/blog-item/blog-item.component.sass
@@ -10,7 +10,7 @@
     .aae-blog-item-img
       position: relative
       width: 100%
-      z-index: 20
+      z-index: 10
 
       a
         outline: none
@@ -32,7 +32,7 @@
       text-align: center
 
       a
-        z-index: 40
+        z-index: 20
         color: $grey-900
         text-decoration: none
         -webkit-transition: all 250ms ease-out
